Add score counters, a main menu, and a 2nd player
The score counters and the main menu use freetype2 for text rendering.
And the second player/paddle is just a simple bot that goes in the
direction of the ball.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/cglm"]
 	path = lib/cglm
 	url = https://github.com/recp/cglm
+[submodule "lib/freetype"]
+	path = lib/freetype
+	url = https://gitlab.freedesktop.org/freetype/freetype.git
