--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           sudo apt-get update
           # x11
-          sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
+          sudo apt-get install libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev
           # openal
           sudo apt-get install libopenal1 libopenal-dev
           sudo apt-get install libalut0 libalut-dev
